# rusty-euler

./: Cargo.toml
src/: generics.rs  main.rs  variables_n_mutability.rs
src/project_euler/: euler_1.rs  euler_2.rs  euler_3.rs
